setup/03_argocd_route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: argocd-server
  selfLink: /apis/route.openshift.io/v1/namespaces/argocd/routes/argocd-server
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
